[tgl][bisected][regression][iris] failure on dEQP-EGL.functional.wide_color.pbuffer_8888_colorspace_default
Test intermittently fails after mesa=2907faee
Author: Luigi Santivetti <luigi.santivetti@imgtec.com>
Date: Tue Jun 30 14:59:45 2020 +0100
egl/dri2: try to bind old context if bindContext failed
This change mostly touches error handling code paths, where a
bug was found when the DRI driver failed to bind a new DRI
context. Specifically, the reason for it to fail was the window
system unable (for whatever reason) to provide the DRI drawable
with a buffer. In this instance, Mesa un-does the EGL bindings,
but doesn't restore the old DRI context, hence remaining in a
funny state. It's worth mentioning that despite trying, there
is no guarantee that the old DRI context can be restored,
depending on the runtime.
...
Signed-off-by: Luigi Santivetti <luigi.santivetti@imgtec.com>
Reviewed-by: Emil Velikov <emil.velikov@collabora.com>
Acked-by: Eric Engestrom <eric@engestrom.ch>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/5707>
Reprod steps were to run deqp-egl (test suite is sharded in mesa CI, prolly want to run the whole thing if tested locally). I wasn't able to reproduce failure when I ran the test on its own.
Output from https://mesa-ci.01.org/mesa_master/builds/21806/group/63a9f0ea7bb98050796b649e85481845:
stdout
8 configs returned
Test Pbuffer
m_iterations.count = 3
start = -0.333252
increment = 0.000488281
count = 10
Image comparison failed: reference = -0.333252, expected = 0:0:0:0, result = 0:255:255:255
start = -0.00244141
increment = 0.000488281
count = 10
start = 0.995117
increment = 0.000976562
count = 10
stderr
pid: 704494